--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ja Irre Verben application</title>
+	<meta property="fb:app_id" content="476983569010542" />
         <meta property="og:title" content="Ja Irre Verben"/>
         <meta property="og:type" content="article" />
         <meta property="og:url" content="http://edapx.com/ja-irre-verben/" />
