--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/it_IT/all.js#xfbml=1&appId=211984838924670";
+  js.src = "//connect.facebook.net/en_EN/all.js#xfbml=1&appId=476983569010542";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
 <a href="http://github.com/edap/ja-irre-verben">
 <img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" style="position: absolute; top: 0; right: 0; border: 0;">
 </a>
