--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta property="og:type" content="article" />
         <meta property="og:url" content="http://edapx.com/ja-irre-verben/" />
         <meta property="og:image" content="http://edapx.com/ja-irre-verben/ico/facebook.png"/>
-        <meta property="og:description" content="Ja Irre-Verben is an android application thought for learning partizip forms of german"/>
+        <meta property="og:description" content="Ja Irre-Verben is an android application thought for learning partizip forms of german irregular verbs"/>
         <meta property="og:site_name" content="Ja Irre Verben"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="android, app, learn german,partizip, irregular verben">
-    <meta name="description" content="Ja Irre-Verben is an android application thought for learning partizip forms of german">
+    <meta name="description" content="Ja Irre-Verben is an android application thought for learning partizip forms of german irregular verbs">
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
