--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <iframe src="http://player.vimeo.com/video/55345258?badge=0&amp;color=cccccc" width="700" height="394" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         <p class="lead"></p>
-        <a class="btn btn-large btn-success" href="#">Download it</a>
+	<a href="https://play.google.com/store/apps/details?id=com.edapx.jairreverben"><img src ="img/gplay.png"></a>
       </div>
 
       <hr>
