--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
           <h4>Was ist das?</h4>
           <p>Ja Irre-Verben ist eine android App um die Partizipien der
-	  Deutschen Unregelm&auml;&szlig; Verben zu lernen</p>
+	  Deutschen Unregelm&auml;&szlig;ige Verben zu lernen</p>
 
           <h4>What's this?</h4>
           <p>Ja Irre-Verben is an android application thought for learning partizip forms of german
