--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
         <meta property="og:type" content="article" />
         <meta property="og:url" content="http://edapx.com/ja-irre-verben/" />
         <meta property="og:image" content="http://edapx.com/ja-irre-verben/ico/facebook.png"/>
-        <meta property="og:description" content="Ja Irre-Verben is an android application thought for learning partizip forms of german irregular verbs"/>
+        <meta property="og:description" content=""Ja Irre Verben" is an android application thought for learning partizip forms of german irregular verbs"/>
         <meta property="og:site_name" content="Ja Irre Verben"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="android, app, learn german,partizip, irregular verben">
-    <meta name="description" content="Ja Irre-Verben is an android application thought for learning partizip forms of german irregular verbs">
+    <meta name="description" content=""Ja Irre Verben" is an android application thought for learning partizip forms of german irregular verbs">
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -107,20 +107,20 @@
 
 
           <h4>Was ist das?</h4>
-          <p>Ja Irre-Verben ist eine android App um die Partizipien der
+          <p>"Ja Irre Verben" ist eine android App um die Partizipien der
 	  Deutschen Unregelm&auml;&szlig;ige Verben zu lernen</p>
 
           <h4>What's this?</h4>
-          <p>Ja Irre-Verben is an android application thought for learning partizip forms of german
+          <p>"Ja Irre Verben" is an android application thought for learning partizip forms of german
 	  irregular verbs</p>
         </div>
 
         <div class="span6">
           <h4>Cosa &egrave;?</h4>
-          <p>Ja Irre-Verben &egrave; un'android application per imparare il participio dei verbi irregolari tedeschi.</p>
+          <p>"Ja Irre Verben" &egrave; un'android application per imparare il participio dei verbi irregolari tedeschi.</p>
 	
 	<h4>Cosa es?</h4>
- 	<p>Ja Irre-Verben es una aplicaci&oacute;n para android pensada para aprender formas de participio de verbos alemanes irregulares.</p>
+ 	<p>"Ja Irre Verben" es una aplicaci&oacute;n para android pensada para aprender formas de participio de verbos alemanes irregulares.</p>
 	
 	</div>
 
