--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
 
 
           <h4>Was ist das?</h4>
-          <p>"Ja Irre Verben" ist eine android App um die Partizipien der
+          <p>"Ja irre Verben" ist eine android App um die Partizipien der
 	  Deutschen Unregelm&auml;&szlig;ige Verben zu lernen</p>
 
           <h4>What's this?</h4>
-          <p>"Ja Irre Verben" is an android application thought for learning partizip forms of german
+          <p>"Ja irre Verben" is an android application thought for learning partizip forms of german
 	  irregular verbs</p>
         </div>
 
         <div class="span6">
           <h4>Cosa &egrave;?</h4>
-          <p>"Ja Irre Verben" &egrave; un'android application per imparare il participio dei verbi irregolari tedeschi.</p>
+          <p>"Ja irre Verben" &egrave; un'android application per imparare il participio dei verbi irregolari tedeschi.</p>
 	
 	<h4>Cosa es?</h4>
- 	<p>"Ja Irre Verben" es una aplicaci&oacute;n para android pensada para aprender formas de participio de verbos alemanes irregulares.</p>
+ 	<p>"Ja irre Verben" es una aplicaci&oacute;n para android pensada para aprender formas de participio de verbos alemanes irregulares.</p>
 	
 	</div>
 
