--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
 
           <h4>Was ist das?</h4>
-          <p>"Ja irre Verben" ist eine android App um die Partizipien der
-	  Deutschen Unregelm&auml;&szlig;ige Verben zu lernen</p>
+          <p>"Ja irre Verben" ist eine android App, um die
+	  Partizipien der deutschen unregelm&auml;&szlig;igen  Verben zu lernen</p>
 
           <h4>What's this?</h4>
           <p>"Ja irre Verben" is an android application thought for learning partizip forms of german
