--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 	  Partizipien der deutschen unregelm&auml;&szlig;igen  Verben zu lernen</p>
 
           <h4>What's this?</h4>
-          <p>"Ja irre Verben" is an android application thought for learning partizip forms of german
+          <p>"Ja irre Verben" is an android application thought for learning
+	  past perfect forms of german
 	  irregular verbs</p>
         </div>
 
